--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,6 +1,6 @@
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">Spa Management</h2>
+        <h2 class="oe_slogan"> Appointment Management</h2>
         <h3 class="oe_slogan">Appointments Module</h3>
          <h4 class="oe_slogan">Author : Vitek</h4>
         <div>
